swap labels and selectors on edit page

--- a/app/views/scores/edit.html.erb
+++ b/app/views/scores/edit.html.erb
@@ -28,26 +28,26 @@
       </div>
       <table class="new-score-selectors-table">
         <tr class="score-select-div">
-          <td class="score-select-td"><%= f.select :financial_to_s, financial_need, prompt: "Enter Rating", class: "selector" %></td>
           <td class="score-select-td"><%= f.label :financial, "Financial Need", class: "form-label" %></td>
+          <td class="score-select-td"><%= f.select :financial_to_s, financial_need, prompt: "Enter Rating", class: "selector" %></td>
         </tr>
         <tr class="score-select-div">
-          <td class="score-select-td"><%= f.select :academic_to_s, academics, prompt: "Enter Rating", class: "selector" %></td>
           <td class="score-select-td"><%= f.label :academic, "Academics", class: "form-label" %></td>
+          <td class="score-select-td"><%= f.select :academic_to_s, academics, prompt: "Enter Rating", class: "selector" %></td>
         </tr>
         <tr class="score-select-div">
-          <td class="score-select-td"><%= f.select :recommend_to_s, recommendations, prompt: "Enter Rating", class: "selector" %></td>
           <td class="score-select-td"><%= f.label :recommend, "Recommendations", class: "form-label" %></td>
+          <td class="score-select-td"><%= f.select :recommend_to_s, recommendations, prompt: "Enter Rating", class: "selector" %></td>
         </tr>
         <tr class="score-select-div">
-          <td class="score-select-td"><%= f.select :essay, ten_points, prompt: "Enter Rating", class: "selector" %></td>
           <td class="score-select-td"><%= f.label :essay, "Reader Impressions", class: "form-label" %></td>
+          <td class="score-select-td"><%= f.select :essay, ten_points, prompt: "Enter Rating", class: "selector" %></td>
         </tr>
       </table>
       <p><%= f.label :comments, "Comments (optional)" %></p>
       <p><%= f.text_area :comments, class: "text-area" %></p>
       <p><%= f.hidden_field :applicant_id %></p>
-      <p><%= f.submit "Submit Scores", class: "green-link" %></p>
+      <p><%= f.submit "Update Scores", class: "green-link" %></p>
     <% end %>
 </div>
 <div class="reviewed-by-text">
