Error attributes changed, index headers changed

--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -10,11 +10,11 @@
           <th class="th-non-link">Submitted</th>
           <th class="th-non-link">Last Name</th>
           <th class="th-non-link">First Name</th>
-          <th class="th-non-link">Elligible for McCoy</th>
-          <th class="th-non-link">Financial Score</th>
-          <th class="th-non-link">Academic Score</th>
-          <th class="th-non-link">Recommend Score</th>
-          <th class="th-non-link">Essay Score</th>
+          <th class="th-non-link">McCoy</th>
+          <th class="th-non-link">Fin</th>
+          <th class="th-non-link">Acad</th>
+          <th class="th-non-link">Recs</th>
+          <th class="th-non-link">Impression</th>
           <th class="th-non-link">Comments</th>
           <th class="th-non-link"></th>
           <th class="th-non-link-last"></th>
