--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'application' %>
-    <%= favicon_link_tag asset_path('HNC-Aliens-RGB-color.png')%>
+    <%= favicon_link_tag asset_path('HNC-Aliens-RGB-color-250x253.png')%>
   </head>
 
   <body class="l-body">
