--- a/app/javascript/application/styles/4_layout/header.css
+++ b/app/javascript/application/styles/4_layout/header.css
@@ -14,6 +14,7 @@
   & .l-header__link {
     color: var(--color-white);
     padding-top: 1.2rem;
+    justify-content: left;
   }
 
   & .l-header__button {
@@ -22,6 +23,7 @@
     text-align: center;
     margin: auto;
     margin-top: 1.3rem;
+    line-height: 1.4;
     display: flex;
     color: var(--color-white);
     font-size: var(--font-size-sm);
@@ -46,4 +48,13 @@
     color: var(--color-white);
     font-size: var(--font-size-lg);
   }
+}
+
+.header-logo {
+  padding: 12px;
+}
+
+.header-title {
+  display: flex;
+  float: left;
 }
