--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -30,15 +30,15 @@
       <table class="new-score-selectors-table">
         <tr class="score-select-div">
           <td class="score-select-td"><%= f.label :financial, "Financial Need", class: "form-label"  %></td>
-          <td class="score-select-td"><%= f.select :financial, financial_need, prompt: "Enter Rating", class: "selector" %></td>
+          <td class="score-select-td"><%= f.select :financial_to_s, financial_need, prompt: "Enter Rating", class: "selector" %></td>
         </tr>
         <tr class="score-select-div">
           <td class="score-select-td"><%= f.label :academic, "Academics", class: "form-label" %></td>
-          <td class="score-select-td"><%= f.select :academic, academics, prompt: "Enter Rating", class: "selector" %></td>
+          <td class="score-select-td"><%= f.select :academic_to_s, academics, prompt: "Enter Rating", class: "selector" %></td>
         </tr>
         <tr class="score-select-div">
           <td class="score-select-td"><%= f.label :recommend, "Recommendations", class: "form-label" %></td>
-          <td class="score-select-td"><%= f.select :recommend, recommendations, prompt: "Enter Rating", class: "selector" %></td>
+          <td class="score-select-td"><%= f.select :recommend_to_s, recommendations, prompt: "Enter Rating", class: "selector" %></td>
         </tr>
         <tr class="score-select-div">
           <td class="score-select-td"><%= f.label :essay, "Reader Impressions", class: "form-label" %></td>
